crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_024_VRC6_Sun_Dried_Demo_PD_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-024-VRC6/Sun Dried Demo (PD).zip
rom_sha256=22d19f323577fee59ce3b5c341cd98c8e88757b267381aba01e0965f766f5c9c
frames=1141
fb_bytes=245760
cycles=33949773
audio_samples=836505
audio_fnv1a64=428d694d42bf5cab
checkpoint f900 fb_fnv1a64=7c835883cc263473
checkpoint f1100 fb_fnv1a64=6647ac501db7b81a
