crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_024_VRC6_Super_Mario_Bros_Cooperative_two_player.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-024-VRC6/Super Mario Bros. (Cooperative two-player).zip
rom_sha256=f4221911381ff430a7e88943fa1672241492146d8603639ea564a6f2ff3649f3
frames=1141
fb_bytes=245760
cycles=33949779
audio_samples=836505
audio_fnv1a64=4b1652a3f3299e1b
checkpoint f900 fb_fnv1a64=6464ecdef9ee4ace
checkpoint f1100 fb_fnv1a64=6464ecdef9ee4ace
