crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_025_VRC2_VRC4_Ganbare_Goemon_Gaiden_Kieta_Ougon_Kiseru_Japan_En_0_99c.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-025-VRC2-VRC4/Ganbare Goemon Gaiden - Kieta Ougon Kiseru (Japan) (En) (0.99c).nes
rom_sha256=a9015ea245b0326d4153bad43331a5ec067f74a313b11a78e961541eb46fbb06
frames=700
fb_bytes=245760
cycles=20816571
audio_samples=512903
audio_fnv1a64=63bf4759f86e8bd2
checkpoint f700 fb_fnv1a64=e3158a5a7f89d5a3
