crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_026_VRC6_Esper_Dream_2_Aratanaru_Tatakai_Japan_En_1_0.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-026-VRC6/Esper Dream 2 - Aratanaru Tatakai (Japan) (En) (1.0).nes
rom_sha256=06f1dfcb506d076b0e48f9e5c30ca9bc9756118a5dfa6f10c96b1d38999c5c60
frames=1141
fb_bytes=245760
cycles=33949789
audio_samples=836505
audio_fnv1a64=7350ff34978fef9c
checkpoint f900 fb_fnv1a64=d7746221e2882d75
checkpoint f1100 fb_fnv1a64=abd806b627e23859
