crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_026_VRC6_Mouryou_Senki_Madara_Japan_En_1_0.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-026-VRC6/Mouryou Senki Madara (Japan) (En) (1.0).nes
rom_sha256=e1257a952a89ad5becef157ae3cf978b28cc2abbf5a2211c8705197f4f42c31b
frames=1141
fb_bytes=245760
cycles=33949776
audio_samples=836505
audio_fnv1a64=60fbda9599069c9b
checkpoint f900 fb_fnv1a64=e6084a569960975d
checkpoint f1100 fb_fnv1a64=e6084a569960975d
